--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
         <div class="icon icon-x">
           <svg width="18" height="18" viewBox="0 0 24 24" fill="#e8eaf0"><path d="M18.244 2.25h3.308l-7.227 8.26 8.502 11.24H16.17l-4.714-6.231-5.401 6.231H2.746l7.73-8.835L1.254 2.25H8.08l4.253 5.622zm-1.161 17.52h1.833L7.084 4.126H5.117z"/></svg>
         </div>
-        <div class="label">X / Twitter<span>@YOUR-HANDLE</span></div>
+        <div class="label">Mastodon<span>@silvetti@mastodon.social</span></div>
         <div class="arrow">→</div>
       </a>
 
