--- a/index.html
+++ b/index.html
@@ -185,7 +185,7 @@
     .icon-linkedin  { background: rgba(10,102,194,0.18); }
     .icon-email     { background: rgba(234,67,53,0.15); }
     .icon-web       { background: rgba(108,142,245,0.14); }
-    .icon-x         { background: rgba(255,255,255,0.08); }
+    .icon-mastodon  { background: rgba(255,255,255,0.08); }
 
     /* Divider */
     .divider {
@@ -227,7 +227,7 @@
       </div>
       <div class="badges">
         <span class="badge">☕ Specialty Coffee</span>
-        <span class="badge">📻 Amateur Radio</span>
+        <span class="badge">🪵 Bushcraft</span>
         <span class="badge">💊 Pharma</span>
       </div>
     </div>
