--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
       <div class="avatar">TP</div>
       <div>
         <h1>Tomás Pita da Silva</h1>
-        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Amateur radio operator</p>
+        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Father to a 4 year old</p>
       </div>
       <div class="badges">
         <span class="badge">☕ Specialty Coffee</span>
