--- a/index.html
+++ b/index.html
@@ -223,12 +223,12 @@
       <div class="avatar">TP</div>
       <div>
         <h1>Tomás Pita da Silva</h1>
-        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Father to a 4 year old</p>
+        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Husband and father to a 4 year old</p>
       </div>
       <div class="badges">
         <span class="badge">☕ Specialty Coffee</span>
         <span class="badge">🪵 Bushcraft</span>
-        <span class="badge">💊 Pharma</span>
+        <span class="badge">🕹️ Gaming</span>
       </div>
     </div>
 
