--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 
     <!-- Profile -->
     <div class="profile">
-      <div class="avatar">TP</div>
+      <img class="avatar" src="https://your-image-url.jpg" alt="Tomás Pita da Silva" />
       <div>
         <h1>Tomás Pita da Silva</h1>
         <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Husband and father to a 4 year old</p>
