--- a/index.html
+++ b/index.html
@@ -221,9 +221,10 @@
     <!-- Profile -->
     <div class="profile">
       <img class="avatar" src="profile.jpeg" alt="Tomás Pita da Silva" />
+    </div>
       <div>
         <h1>Tomás Pita da Silva</h1>
-        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Husband and father to a 4 year old</p>
+        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Heavy coffee drinker &middot; Father to a 4 year old</p>
       </div>
       <div class="badges">
         <span class="badge">☕ Specialty Coffee</span>
