Refactor CSS styles and update HTML structure

--- a/index.html
+++ b/index.html
@@ -8,9 +8,13 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
   <style>
-    *, *::before, *::after {{ box-sizing: border-box; margin: 0; padding: 0; }}
+    *, *::before, *::after {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+    }
 
-    :root {{
+    :root {
       --bg: #0d0f14;
       --card: #161b27;
       --border: rgba(255,255,255,0.07);
@@ -19,43 +23,49 @@
       --text: #e8eaf0;
       --muted: #7a8099;
       --radius: 14px;
-    }}
+    }
 
-    html {{ scroll-behavior: smooth; }}
-
-    body {{
+    body {
       font-family: 'Inter', system-ui, sans-serif;
-      background: var(--bg);
-      color: var(--text);
+      background-color: #0d0f14;
+      color: #e8eaf0;
       min-height: 100vh;
       display: flex;
       flex-direction: column;
       align-items: center;
       justify-content: center;
       padding: 2rem 1rem;
-    }}
+      position: relative;
+      overflow-x: hidden;
+    }
 
-    /* Ambient background blobs */
-    body::before, body::after {{
-      content: '';
+    .blob1 {
       position: fixed;
+      width: 500px;
+      height: 500px;
       border-radius: 50%;
+      background: rgba(108, 142, 245, 0.12);
       filter: blur(120px);
+      top: -150px;
+      left: -150px;
       z-index: 0;
       pointer-events: none;
-    }}
-    body::before {{
-      width: 500px; height: 500px;
-      background: rgba(108, 142, 245, 0.12);
-      top: -150px; left: -150px;
-    }}
-    body::after {{
-      width: 400px; height: 400px;
-      background: rgba(194, 125, 58, 0.10);
-      bottom: -100px; right: -100px;
-    }}
+    }
 
-    .container {{
+    .blob2 {
+      position: fixed;
+      width: 400px;
+      height: 400px;
+      border-radius: 50%;
+      background: rgba(194, 125, 58, 0.10);
+      filter: blur(120px);
+      bottom: -100px;
+      right: -100px;
+      z-index: 0;
+      pointer-events: none;
+    }
+
+    .container {
       position: relative;
       z-index: 1;
       width: 100%;
@@ -64,156 +74,151 @@
       flex-direction: column;
       align-items: center;
       gap: 1.75rem;
-    }}
+    }
 
-    /* Avatar + name */
-    .profile {{
+    .profile {
       display: flex;
       flex-direction: column;
       align-items: center;
       gap: 1rem;
       text-align: center;
-    }}
+    }
 
-    .avatar {{
+    .avatar {
       width: 90px;
       height: 90px;
       border-radius: 50%;
-      object-fit: cover;
-      object-position: center;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      box-shadow: 0 0 0 3px rgba(108,142,245,0.25);
-      background: linear-gradient(135deg, var(--accent), var(--accent2));
       overflow: hidden;
-    }}
+      box-shadow: 0 0 0 3px rgba(108,142,245,0.35);
+      flex-shrink: 0;
+    }
 
-    .avatar img {{
+    .avatar img {
       width: 100%;
       height: 100%;
-      border-radius: inherit;
       object-fit: cover;
+      object-position: center top;
       display: block;
-    }}
+    }
 
-    .profile h1 {{
+    .profile h1 {
       font-size: 1.6rem;
       font-weight: 700;
       letter-spacing: -0.5px;
-    }}
+      color: #e8eaf0;
+    }
 
-    .profile p {{
+    .profile p {
       font-size: 0.92rem;
-      color: var(--muted);
-      line-height: 1.5;
+      color: #7a8099;
+      line-height: 1.6;
       max-width: 320px;
-    }}
+    }
 
-    .badges {{
+    .badges {
       display: flex;
       gap: 0.5rem;
       flex-wrap: wrap;
       justify-content: center;
-    }}
+    }
 
-    .badge {{
+    .badge {
       background: rgba(108,142,245,0.12);
       border: 1px solid rgba(108,142,245,0.25);
-      color: var(--accent);
+      color: #6c8ef5;
       font-size: 0.72rem;
       font-weight: 500;
       padding: 0.25rem 0.65rem;
       border-radius: 20px;
       letter-spacing: 0.3px;
-    }}
+    }
 
-    /* Link cards */
-    .links {{
+    .links {
       width: 100%;
       display: flex;
       flex-direction: column;
       gap: 0.75rem;
-    }}
+    }
 
-    .link-card {{
+    .link-card {
       display: flex;
       align-items: center;
       gap: 1rem;
       padding: 1rem 1.25rem;
-      background: var(--card);
-      border: 1px solid var(--border);
-      border-radius: var(--radius);
+      background-color: #161b27;
+      border: 1px solid rgba(255,255,255,0.07);
+      border-radius: 14px;
       text-decoration: none;
-      color: var(--text);
+      color: #e8eaf0;
       font-size: 0.95rem;
       font-weight: 500;
-      transition: transform 0.18s ease, border-color 0.18s ease, background 0.18s ease;
-      cursor: pointer;
-    }}
+      transition: transform 0.18s ease, border-color 0.18s ease, background-color 0.18s ease;
+    }
 
-    .link-card:hover {{
+    .link-card:hover {
       transform: translateY(-2px);
       border-color: rgba(108,142,245,0.4);
-      background: rgba(108,142,245,0.07);
-    }}
+      background-color: rgba(108,142,245,0.07);
+    }
 
-    .link-card .icon {{
+    .icon {
       width: 40px;
       height: 40px;
       border-radius: 10px;
       display: flex;
       align-items: center;
       justify-content: center;
-      font-size: 1.2rem;
       flex-shrink: 0;
-    }}
+    }
 
-    .link-card .label {{ flex: 1; }}
-    .link-card .label span {{
+    .icon-linkedin { background-color: rgba(10,102,194,0.18); }
+    .icon-mastodon { background-color: rgba(102,126,234,0.18); }
+
+    .label {
+      flex: 1;
+    }
+
+    .label span {
       display: block;
       font-size: 0.72rem;
-      color: var(--muted);
+      color: #7a8099;
       font-weight: 400;
-      margin-top: 1px;
-    }}
+      margin-top: 2px;
+    }
 
-    .link-card .arrow {{
-      color: var(--muted);
+    .arrow {
+      color: #7a8099;
       font-size: 0.9rem;
       transition: color 0.18s, transform 0.18s;
-    }}
-    .link-card:hover .arrow {{
-      color: var(--accent);
+    }
+
+    .link-card:hover .arrow {
+      color: #6c8ef5;
       transform: translateX(3px);
-    }}
+    }
 
-    /* Icon backgrounds per service */
-    .icon-linkedin  {{ background: rgba(10,102,194,0.18); }}
-    .icon-mastodon  {{ background: rgba(102, 126, 234, 0.18); }}
-
-    /* Footer */
-    footer {{
+    footer {
       font-size: 0.72rem;
-      color: var(--muted);
+      color: #7a8099;
       text-align: center;
-      margin-top: 1rem;
-    }}
-    footer a {{ color: var(--muted); text-decoration: none; }}
-    footer a:hover {{ color: var(--text); }}
+      margin-top: 0.5rem;
+    }
   </style>
 </head>
 <body>
+
+  <div class="blob1"></div>
+  <div class="blob2"></div>
+
   <div class="container">
 
-    <!-- Profile -->
     <div class="profile">
       <div class="avatar">
         <img src="profile.jpeg" alt="Tomás Pita da Silva" />
       </div>
       <div>
         <h1>Tomás Pita da Silva</h1>
-        <p>Senior Manager at GSK · Poznań, Poland<br/>Coffee enthusiast · Amateur radio operator</p>
+        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Amateur radio operator</p>
       </div>
       <div class="badges">
         <span class="badge">☕ Specialty Coffee</span>
@@ -222,12 +227,13 @@
       </div>
     </div>
 
-    <!-- Links (only LinkedIn + Mastodon) -->
     <div class="links">
 
       <a class="link-card" href="https://www.linkedin.com/in/tomaspitadasilva" target="_blank" rel="noopener">
         <div class="icon icon-linkedin">
-          <svg width="20" height="20" viewBox="0 0 24 24" fill="#0a66c2"><path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/></svg>
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="#0a66c2">
+            <path d="M20.447 20.452h-3.554v-5.569c0-1.328-.027-3.037-1.852-3.037-1.853 0-2.136 1.445-2.136 2.939v5.667H9.351V9h3.414v1.561h.046c.477-.9 1.637-1.85 3.37-1.85 3.601 0 4.267 2.37 4.267 5.455v6.286zM5.337 7.433a2.062 2.062 0 0 1-2.063-2.065 2.064 2.064 0 1 1 2.063 2.065zm1.782 13.019H3.555V9h3.564v11.452zM22.225 0H1.771C.792 0 0 .774 0 1.729v20.542C0 23.227.792 24 1.771 24h20.451C23.2 24 24 23.227 24 22.271V1.729C24 .774 23.2 0 22.222 0h.003z"/>
+          </svg>
         </div>
         <div class="label">LinkedIn<span>Connect professionally</span></div>
         <div class="arrow">→</div>
@@ -246,9 +252,10 @@
     </div>
 
     <footer>
-      © 2026 Tomás Pita da Silva
+      &copy; 2026 Tomás Pita da Silva
     </footer>
 
   </div>
+
 </body>
 </html>
