--- a/index.html
+++ b/index.html
@@ -218,12 +218,12 @@
       </div>
       <div>
         <h1>Tomás Pita da Silva</h1>
-        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Coffee enthusiast &middot; Amateur radio operator</p>
+        <p>Senior Manager at GSK &middot; Poznań, Poland<br/>Addicted to coffee&middot; Father of a 4 year old</p>
       </div>
       <div class="badges">
         <span class="badge">☕ Specialty Coffee</span>
-        <span class="badge">📻 Amateur Radio</span>
-        <span class="badge">💊 Pharma</span>
+        <span class="badge">🪵 Bushcraft</span>
+        <span class="badge">🕹️ Gaming</span>
       </div>
     </div>
 
