--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet" />
+  <link rel="me" href="https://mastodon.social/@silvetti">
   <style>
     *, *::before, *::after {
       box-sizing: border-box;
@@ -256,6 +257,6 @@
     </footer>
 
   </div>
-<a rel="me" href="https://mastodon.social/@silvetti">Mastodon</a>
+
 </body>
 </html>
